--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -218,7 +218,7 @@
 							<ul class="nav navbar-nav no-float pull-center submenu-ul">
 
 
-								<li class="dropdown" ng-click="moreEquipments()" style="padding-right: 0 !important;">
+								<li class="dropdown" ng-click="moreEquipments()">
 									<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="padding: 10px 0;">More <span class="caret"></span>
 									</a>
 								</li>
