--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5662,14 +5662,19 @@ button.btn {
       float: none;
       display: block;
       flex: 0 1 auto;
-      padding: 0 5.9% 0 0;
+      padding: 0 2.45% 0 2.45%;
+      transition: all 0.6s ease;
+      &:hover {
+        background-color: #3E3E3E !important;
+        color: $primary-orange-color !important;
+      }
+      &:focus {
+        background-color: #3E3E3E !important;
+        color: $primary-orange-color !important;
+      }
       a {
         transition: all 0.6s ease;
         &:hover {
-          background-color: #3E3E3E !important;
-          color: $primary-orange-color !important;
-        }
-        &:focus {
           background-color: #3E3E3E !important;
           color: $primary-orange-color !important;
         }
@@ -5686,6 +5691,10 @@ button.btn {
       .not-user {
         > a {
           padding: 10px 0px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+          width: 117px;
         }
       }
     }
@@ -6059,6 +6068,7 @@ section {
     text-align: right;
     font-size: 18px;
     color: #333333;
+    margin-bottom: 10px;
     span {
       font-weight: 600;
     }
