--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -105,18 +105,16 @@
                 <a class="soap-popupbox pointerhover">{{item.name}}</a>
               </li>
 
-							<li class="dropdown landing-dropdown" ng-click="moreEquipments()" style="padding-right: 0 !important;">
+							<li class="dropdown landing-dropdown" ng-click="moreEquipments()">
 								<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="padding: 10px 0;">More <span class="caret"></span>
 								</a>
 							</li>
 						</ul>
 						<div class="container hide-more top-header more-equip-container" ng-class="{'visible-more': isMore}">
-								<div class="row hidden-sm hidden-xs">
+								<div class="row hidden-sm hidden-xs no-margin">
 									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col" ng-repeat="item in mdl.categories | slice:6:mdl.categories.length" ui-sref="main.search({category:item.id})">
-										<h3 class="heading-text">{{item.name}}</h3>
-
+										<h3 class="heading-text"><a href="">{{item.name}}</a></h3>
 									</div>
-
 								</div>
 						</div>
 					</div>
@@ -484,15 +482,15 @@
                     <div>
                       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 price-col">
                         <p>Daily</p>
-                        <h3>{{product.daily_price}}</h3>
+                        <h3>${{product.daily_price}}</h3>
                       </div>
                       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 price-col">
                         <p>Weekly</p>
-                        <h3>{{product.weekly_price}}</h3>
+                        <h3>${{product.weekly_price}}</h3>
                       </div>
                       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 price-col">
                         <p>Monthly</p>
-                        <h3>{{product.monthly_price}}</h3>
+                        <h3>${{product.monthly_price}}</h3>
                       </div>
                     </div>
                     <div class="action">
