--- a/src/app/views/forgot-password/forgot-password.html
+++ b/src/app/views/forgot-password/forgot-password.html
@@ -1,6 +1,7 @@
 <div class="travelo-login-box travelo-box">
     <h2>Forgot Password</h2>
     <form validate-form name="forgotMdl.form" novalidate >
+        <i class="fa fa-times close-forgot" ng-click="close()"></i>
         <div class="form-group">
             <input type="text" name="email" ng-model="forgotMdl.data.email" required class="input-text full-width" placeholder="email address">
         </div>
