--- a/src/app/views/sign-up/sign-up.html
+++ b/src/app/views/sign-up/sign-up.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 signup-col no-lpadding">
         <div class="travelo-signup-box travelo-box">
-            <i class="fa fa-times close-login"></i>
+            <i class="fa fa-times close-login" ng-click="close()"></i>
             <div class="simple-signup">
                 <div class="text-center signup-email-section">
                     <a ng-click="signUpMdl.emailSignUp=!signUpMdl.emailSignUp" class="signup-email pointerhover"><i class="soap-icon-letter"></i>Sign up with Email</a>
