--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -127,74 +127,8 @@
 			<div class="col-xs-12">
 				<i class="fa fa-times pull-right white-color" ng-click="closeEquipment()"></i>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
-				<h3 class="heading-text">Aerial Lifts</h3>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
-				<h3 class="heading-text">Aerial Lifts</h3>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
-				<h3 class="heading-text">Aerial Lifts</h3>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
-				<p>
-					<a href="">
-						Some Name
-					</a>
-				</p>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col" ng-repeat="item in mdl.categories | slice:6:mdl.categories.length" ui-sref="main.search({category:item.id})">
+				<h3 class="heading-text"><a href="">{{item.name}}</a></h3>
 			</div>
 		</div>
 	</div>
@@ -226,7 +160,7 @@
 							<div class="form-group col-lg-10 col-md-9 col-sm-9 col-xs-12">
 								<angucomplete-alt placeholder="Equipment Name, Part Name, etc.." pause="400" selected-object="mdl.searchObj" remote-api-handler="mdl.searchHelper" remote-url-data-field="data" title-field="name" input-changed="mdl.inputChanged" input-class="input-text full-width"/>
 							</div>
-							<div class="form-group col-lg-2 col-md-3 col-sm-3 col-xs-12 no-lpadding">
+							<div class="form-group col-lg-2 col-md-3 col-sm-3 col-xs-12 no-lpadding-small">
 								<button type="submit" class="full-width btn all-btn search-button" ng-click="mdl.search()">Search Now</button>
 							</div>
 						</div>
@@ -446,7 +380,7 @@
 		</div>
 	</div>
 </section> -->
-<section class="hidden-xs">
+<section>
 	<div class="container section landing-section">
 		<div class="row">
 			<div class="col-lg-12 col-md-12">
@@ -513,7 +447,7 @@
 			</div>
 		</div>
 </section>
-<!--<section class="hidden-xs">
+<!-- <section class="hidden-xs">
 	<div class="container section landing-section">
 		<div class="row">
 			<div class="col-lg-12 col-md-12">
@@ -688,7 +622,7 @@
 				</a>
 			</div>
 		</div>
-		&lt;!&ndash; <div class="car-slideshow image-carousel style2 box landing-img-carousel" data-animation="slide" data-item-width="270" data-item-margin="30">
+		<div class="car-slideshow image-carousel style2 box landing-img-carousel" data-animation="slide" data-item-width="270" data-item-margin="30">
 			<ul class="slides image-box car listing-style1">
 				<li>
 					<article class="box">
@@ -950,8 +884,8 @@
 					</article>
 				</li>
 			</ul>
-		</div> &ndash;&gt;
-</section>-->
+		</div>
+</section> -->
 <section class="gray-area">
 	<div class="container section landing-section">
 		<div class="row">
@@ -967,11 +901,7 @@
 				</div>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</div>
 				<div>
 					-Ashley Deo, CEO ABC Organisation
@@ -983,11 +913,7 @@
 				</div>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</div>
 				<div>
 					-Ashley Deo, CEO ABC Organisation
@@ -999,11 +925,7 @@
 				</div>
 				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</div>
 				<div>
 					-Ashley Deo, CEO ABC Organisation
