--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -6560,7 +6560,9 @@ section {
   .travelo-login-box,
   .travelo-signup-box {
     border: 0;
-    border-left: 2px solid $primary-orange-color;
+    -webkit-box-shadow: -5px 0px 5px -3px $primary-border-color;
+    box-shadow: -5px 0px 5px -3px $primary-border-color;
+    padding-top: 30px;
     .close-login {
       position: absolute;
       right: 10px;
