Angular Update and loader initial code

--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -1,6 +1,9 @@
+<!--<div class="loaderDiv" loader>
+  <i class="fa fa-spinner fa-pulse"></i>
+</div>-->
 <!-- new landing header start -->
 <header scroll id="header" class="navbar-static-top style2">
-	<div class="topnav">
+    <div class="topnav">
 		<div class="container">
 			<ul class="quick-menu pull-right clearfix">
 				<li class="menu-item-has-children pointerhover">
