--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -1,3 +1,7 @@
+<!--<div class="loaderDiv" loader>
+  <i class="fa fa-spinner fa-pulse"></i>
+</div>-->
+
 <div>
 	<header scroll id="header" class="navbar-static-top style2">
 		<div class="topnav">
