--- a/src/app/views/seller-account/equipments/list/list.html
+++ b/src/app/views/seller-account/equipments/list/list.html
@@ -3,6 +3,20 @@
 			<button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.equipments.add"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
 		</h1>
 	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 search-col">
+		<div class="form-control search-div">
+			<input type="text" placeholder="Search">
+			<i class="fa fa-search"></i>
+		</div>
+		Sort By &nbsp
+		<select class="form-control sort-by">
+			<option>A-Z</option>
+			<option>Z-A</option>
+			<option>More-Less</option>
+			<option>Less-More</option>
+			<option>Currently Availbility</option>
+		</select>
+	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-filter">
 		<form>
 				<label class="radio radio-inline">
