--- a/src/app/views/seller-account/inventory/list/list.html
+++ b/src/app/views/seller-account/inventory/list/list.html
@@ -2,7 +2,21 @@
 		<h1 class="no-margin skin-color seller-heading-font">My Inventory
 			<button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.inventory.add"><i class="icon soap-icon-plus"></i> Add New Inventory</button>
 		</h1>
-	</div>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 search-col">
+		<div class="form-control search-div">
+			<input type="text" placeholder="Search">
+			<i class="fa fa-search"></i>
+		</div>
+		Sort By &nbsp
+		<select class="form-control sort-by">
+			<option>A-Z</option>
+			<option>Z-A</option>
+			<option>More-Less</option>
+			<option>Less-More</option>
+			<option>Currently Availbility</option>
+		</select>
+</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 gray-area select-product">
 		<p>
 			Select Product: 
