--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -1,6 +1,18 @@
 <div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">Favorites</h1>
+		<div class="form-control search-div">
+			<input type="text" placeholder="Search">
+			<i class="fa fa-search"></i>
+		</div>
+		Sort By &nbsp
+		<select class="form-control sort-by">
+			<option>A-Z</option>
+			<option>Z-A</option>
+			<option>More-Less</option>
+			<option>Less-More</option>
+			<option>Currently Availbility</option>
+		</select>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
 		<div class="booking-info clearfix" ng-repeat="pro in mdl.favorites">
