--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -66,7 +66,13 @@
 				<a class="btn all-btn grey-button">Cart ({{rmodel.cartCount || 0}})</a>
 			</div>
 		</div> -->
-		<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs">
+		<!-- cart empty -->
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center" ng-if="rmodel.cartCount == 0">
+			<p class="heading-text" style="margin-top: 20px;">Sorry! No items in Cart</p>
+			<a class="btn all-btn primary-btn" href="#/search/" style="margin-bottom: 10px;"><i class="fa fa-chevron-left"></i> Continue Renting Equipments</a>
+		</div>
+		<!-- web cart -->
+		<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs" ng-if="rmodel.cartCount > 0">
 			<table class="table cart-table">
 				<thead>
 					<tr>
@@ -107,8 +113,8 @@
 						</td>
 						<td class="description-td">
 							<h4 style="color: #2d3e52">${{item.cost_breakup.subtotal.amt}}</h4>
-							<p>Shipping: ${{item.cost_breakup.additional_charge[0].amt}}</p>
-							<p>Additional: ${{item.cost_breakup.shipping.amt}}</p>
+							<p>Shipping: ${{item.cost_breakup.shipping.amt}}</p>
+							<p>Additional: ${{item.cost_breakup.additional_charge[0].amt}}</p>
 							<p></p>
 						</td>
 						<td class="details-td">
@@ -131,7 +137,7 @@
 			</table>
 		</div>
 		<!-- mobile cart -->
-		<div class="col-xs-12 visible-xs no-padding">
+		<div class="col-xs-12 visible-xs no-padding" ng-if="rmodel.cartCount > 0">
 			<article class="col-xs-12 mobile-cart" ng-repeat="item in mdl.data.rental_products">
 				<figure>
 					<a href="#" title="" class="hover-effect pull-center"><img ng-src="{{(item.product.image) || 'http://placehold.it/166x150'}}" alt="" class="inline-block"></a>
@@ -166,15 +172,15 @@
 					<div class="col-xs-12 no-padding">
 						<div class="col-xs-4 price-col-mobile">
 							<p>Cost</p>
-							<h3>$12</h3>
+							<h3>${{item.cost_breakup.subtotal.amt}}</h3>
 						</div>
 						<div class="col-xs-4 price-col-mobile">
 							<p>Shipping</p>
-							<h3>$120</h3>
+							<h3>${{item.cost_breakup.shipping.amt}}</h3>
 						</div>
 						<div class="col-xs-4 price-col-mobile">
 							<p>Additional</p>
-							<h3>$1200</h3>
+							<h3>${{item.cost_breakup.additional_charge[0].amt}}</h3>
 						</div>
 					</div>
 					<div class="col-xs-12 devider"></div>
@@ -183,10 +189,7 @@
 					</div>
 					<div class="col-xs-12 devider"></div>
 					<div class="col-xs-12 no-padding action pull-center cart-action">
-						<a href="" class="pull-left">
-							<i class="fa fa-pencil"></i>
-						</a>
-						<a href="" class="text">Bookmark and Remove</a>
+						<!-- <a href="" class="text">Bookmark and Remove</a> -->
 						<a href="" class="pull-right" ng-click="remove(item)">
 							<i class="fa fa-trash"></i>
 						</a>
@@ -195,12 +198,12 @@
 			</article>
 			<div class="col-xs-12 devider"></div>
 		</div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="rmodel.cartCount > 0">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 total-amount-col">
 				<p class="pull-right">Amount Payable: &nbsp<span>$3200.00</span></p>
 			</div>
 		</div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-if="rmodel.cartCount > 0">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-button">
 				<a class="btn all-btn primary-btn" href="#/search/" style="margin-bottom: 10px;"><i class="fa fa-chevron-left"></i> Continue Renting Equipments</a>
 				<button class="btn all-btn pull-right primary-btn" ng-click="checkout()">Checkout</button>
