--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -291,11 +291,7 @@
 		  <div class="tab-content">
 		    <div role="tabpanel" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane active jobsite-tab col-padding-small" id="profile">
 		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			    	<select class="form-control">
-			    		<option>Jobsite: ABC</option>
-			    		<option>Jobsite: XYZ</option>
-			    		<option>Jobsite: PQR</option>
-			    	</select>
+			    	<select ng-model="mdl.selectedShipping"  required ng-options="site.id as site.name for site in mdl.allSites " class="full-width"></select>
 		    	</div>
 		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 		    	</div>
