--- a/src/app/views/seller-account/invoices/list/list.html
+++ b/src/app/views/seller-account/invoices/list/list.html
@@ -1,5 +1,17 @@
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 			<h1 class="no-margin skin-color seller-heading-font">Invoices</h1>
+			<div class="form-control search-div">
+				<input type="text" placeholder="Search">
+				<i class="fa fa-search"></i>
+			</div>
+			Sort By &nbsp
+			<select class="form-control sort-by">
+				<option>A-Z</option>
+				<option>Z-A</option>
+				<option>More-Less</option>
+				<option>Less-More</option>
+				<option>Currently Availbility</option>
+			</select>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
 		<div ng-repeat="item in mdl.items" class="booking-info clearfix no-lpadding no-rpadding">
