--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -1,6 +1,6 @@
-<!--<div class="loaderDiv" loader>
-  <i class="fa fa-spinner fa-pulse"></i>
-</div>-->
+<div class="loaderDiv" loader>
+  <img src="assets/images/loader.gif" class="ajax-loader"/>
+</div>
 <!-- new landing header start -->
 <header scroll id="header" class="navbar-static-top style2">
     <div class="topnav">
